TLU S15 and Dimensional Gates fix

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -44,6 +44,18 @@
     {VARIABLE nfw_already_wound yes}
 [/event]
 
+# Dimensional Gate always is destroyed
+[event]
+    name=last_breath
+    id=nfw_dimensional_gate
+    first_time_only=no
+    [filter]
+		type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
+    [/filter]
+    {NFW_destroyed_WOUND}	
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
 # filter plagueable plagued units
 [event]
     name=last_breath
