--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -662,7 +662,6 @@
 #endif
 
 # Collar of Recall properly works. No wound the first three times, and death the third time.
-
 #ifdef CAMPAIGN_TO_LANDS_UNKNOWN
 [event]
     name=last_breath
@@ -678,6 +677,35 @@
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id $unit.id}
 [/event]
+
+[event]
+    name=last_breath
+    id=nfw_witch_suicide
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL current_scenario_id equals 12_Siege_of_Mag}
+	[/filter_condition]
+    [filter]
+		id=Matriarch3
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Suicide" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_reficul_banish
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL current_scenario_id equals 15_Abyssal_Rebellion}
+	[/filter_condition]
+    [filter]
+		id=Reficul
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Banished" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
 [event]
     name=last_breath
     id=nfw_collar_death
@@ -691,10 +719,14 @@
     {NFW_dead_WOUND}
     {VARIABLE nfw_already_wound yes}
 [/event]
+
 [event]
 	name=last_breath
 	id=nfw_ally_malib_death
 	first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL current_scenario_id equals 12_Siege_of_Mag}
+	[/filter_condition]
 	[filter]
 		ability=temp_ally
 	[/filter]
