--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -141,7 +141,7 @@
 * <b><i>Broken arm</i></b> (-30% non-magical damage) > Races with arms, random, cumulative, 2%
 * <b><i>Broken wing</i></b> (-40% mp) > Races with wings, random, cumulative, 5%
 * <b><i>Broken leg</i></b> (-30% mp) > Races with legs, random, cumulative, 2%
-* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical or spirits, random, cumulative, 1% - 4% with impact attack
+* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical, spirits or magical, random, cumulative, 1% - 4% with impact attack
 * <b><i>Burn</i></b> (-40% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire, cumulative, 9% - 20% mechanical
 * <b><i>Capture</i></b> (increased recall cost based on level) > All units, random, 1% - 10% mechanical - 25% leaders and heroes
 * <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative, 7% - 20% mechanical
