--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -134,6 +134,11 @@
             [or]
                 find_in=nfw_wounded
             [/or]
+#ifdef CAMPAIGN_TO_LANDS_UNKNOWN
+			[or]
+				type=TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
+			[/or]
+#endif			
         [/not]
     [/filter]
 
