--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -381,14 +381,14 @@
                     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Surrender" {NFW_COLOR_RED}}
                 [/then]
                 [else]
-                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
+                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" color="100,255,100"}
                 [/else]
             [/if]
             {VARIABLE nfw_already_wound yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
         [/case]
         [else]
-            {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
+            {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" color="100,255,100"}
             {VARIABLE nfw_already_wound yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
         [/else]
@@ -703,6 +703,36 @@
 		id=Reficul
     [/filter]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Banished" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_rasti_inmortal
+    first_time_only=no
+    [filter]
+		type=TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
+		[or]
+		    id=Master
+		[/or]
+    [/filter]
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_mages_no_wound
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL current_scenario_id equals 19_Sky_Kingdom}
+	[/filter_condition]
+	[filter]
+		race=human
+		[or]
+			type=EoMa_Master_of_Fire
+		[/or]
+	[/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="0,255,255"}
     {VARIABLE nfw_already_wound yes}
 [/event]
 
