[print] message when any option changes

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -322,7 +322,7 @@
                             [filter]
                                 race=undead,eoma_magical
                                 [or]
-                                    trait=elemental,undead
+                                    trait=elemental,undead,magical
                                 [/or]
                             [/filter]
                         [/have_location]
@@ -349,7 +349,7 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                trait=ghost_trait,undead,elemental
+                                trait=ghost_trait,undead,elemental,magical
                             [/filter]
                         [/have_location]
                     [/not]
@@ -367,7 +367,7 @@
                             [have_location]
                                 {EVENT_UNIT}
                                 [filter]
-                                    trait=ghost_trait,elemental
+                                    trait=ghost_trait,elemental,magical
                                 [/filter]
                             [/have_location]
                         [/not]
@@ -431,7 +431,7 @@
             race=undead,eoma_magical
         [/not]
         [not]
-            trait=ghost_trait,undead,elemental
+            trait=ghost_trait,undead,elemental,magical
         [/not]
     [/filter]
     {VARIABLE_OP rand_wound rand "1..40"}
@@ -1210,6 +1210,9 @@
                                 [or]
                                     variation=bat,falcon,gryphon,bird,horse,rat,spider,serpent,boar,wolf
                                 [/or]
+								[or]
+									trait=magical
+								[/or]
                             [/filter]
                         [/have_location]
                         [or]
@@ -1266,6 +1269,9 @@
                                 [or]
                                     variation=bat,drake,falcon,gryphon,swimmer,bird
                                 [/or]
+								[or]
+									trait=magical
+								[/or]
                             [/filter]
                         [/have_location]
                         [or]
@@ -1291,6 +1297,16 @@
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+						[and]
+							[not]
+								[have_location]
+									{EVENT_UNIT}
+									[filter]
+										trait=magical
+									[/filter]
+								[/have_location]
+							[/not]
+						[/and]
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1302,6 +1318,16 @@
                     [if]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+						[and]
+							[not]
+								[have_location]
+									{EVENT_UNIT}
+									[filter]
+										trait=magical
+									[/filter]
+								[/have_location]
+							[/not]
+						[/and]
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
