--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -49,6 +49,12 @@
                                 name=nfwe_wounds
                                 value=0
                             [/set_variable]
+							[print]
+								text=_"Activate Wounds"+" → "+_"Set to"+": 0"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -58,6 +64,12 @@
                                 name=nfwe_wounds
                                 value=1
                             [/set_variable]
+							[print]
+								text=_"Activate Wounds"+" → "+_"Set to"+": 1"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -67,6 +79,12 @@
                                 name=nfwe_wounds
                                 value=2
                             [/set_variable]
+							[print]
+								text=_"Activate Wounds"+" → "+_"Set to"+": 2"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
@@ -87,6 +105,12 @@
                                 name=nfwe_float_text
                                 value=yes
                             [/set_variable]
+							[print]
+								text=_"Float text"+" → "+_"Set to"+": yes"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -96,6 +120,12 @@
                                 name=nfwe_float_text
                                 value=no
                             [/set_variable]
+							[print]
+								text=_"Float text"+" → "+_"Set to"+": no"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
@@ -116,6 +146,12 @@
                                 name=nfw_dialog_manual
                                 value=yes
                             [/set_variable]
+							[print]
+								text=_"Messages"+" → "+_"Set to"+": yes"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -125,6 +161,12 @@
                                 name=nfw_dialog_manual
                                 value=no
                             [/set_variable]
+							[print]
+								text=_"Messages"+" → "+_"Set to"+": no"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
@@ -241,6 +283,12 @@
                                 name=nfwe_deadundead
                                 value=0
                             [/set_variable]
+							[print]
+								text=_"Activate Death"+" → "+_"Set to"+": 0"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -250,6 +298,12 @@
                                 name=nfwe_deadundead
                                 value=1
                             [/set_variable]
+							[print]
+								text=_"Activate Death"+" → "+_"Set to"+": 1"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -259,6 +313,12 @@
                                 name=nfwe_deadundead
                                 value=2
                             [/set_variable]
+							[print]
+								text=_"Activate Death"+" → "+_"Set to"+": 2"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
@@ -291,6 +351,12 @@
                                 name=nfwe_elemental
                                 value=yes
                             [/set_variable]
+							[print]
+								text=_"Elementals"+" → "+_"Set to"+": yes"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -300,6 +366,12 @@
                                 name=nfwe_elemental
                                 value=no
                             [/set_variable]
+							[print]
+								text=_"Elementals"+" → "+_"Set to"+": no"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
@@ -359,6 +431,12 @@
                                 name=nfwe_funny
                                 value=yes
                             [/set_variable]
+							[print]
+								text=_"Funny wounds"+" → "+_"Set to"+": yes"
+								size=24
+								duration=5000
+								color=0,255,255
+							[/print]
                         [/command]
                     [/option]
                     [option]
@@ -368,6 +446,12 @@
                                 name=nfwe_funny
                                 value=no
                             [/set_variable]
+							[print]
+								text=_"Funny wounds"+" → "+_"Set to"+": no"
+								size=24
+								duration=5000
+								color=255,0,0
+							[/print]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
