--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -96,6 +96,9 @@
         [filter_side]
             controller=human
         [/filter_side]
+		[not]
+			type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
+		[/not]
     [/filter]
     [if]
         # Compare with empty var, never use nfw_empty_var as variable
