--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -33,6 +33,7 @@
     [/filter_second]
     [filter_condition]
         {VARIABLE_CONDITIONAL nfwe_wounds not_equals 1}
+        {VARIABLE_CONDITIONAL nfw_already_vanished not_equals $unit.id}
     [/filter_condition]
     [if]
         {VARIABLE_CONDITIONAL nfwe_already_catched not_equals $unit.id}
@@ -52,6 +53,9 @@
     [filter]
         type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
     [/filter]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
+    [/filter_condition]
     {NFW_destroyed_WOUND}
     {VARIABLE nfw_already_wound yes}
 [/event]
@@ -1210,9 +1214,9 @@
                                 [or]
                                     variation=bat,falcon,gryphon,bird,horse,rat,spider,serpent,boar,wolf
                                 [/or]
-								[or]
-									trait=magical
-								[/or]
+                                [or]
+                                    trait=magical
+                                [/or]
                             [/filter]
                         [/have_location]
                         [or]
@@ -1269,9 +1273,9 @@
                                 [or]
                                     variation=bat,drake,falcon,gryphon,swimmer,bird
                                 [/or]
-								[or]
-									trait=magical
-								[/or]
+                                [or]
+                                    trait=magical
+                                [/or]
                             [/filter]
                         [/have_location]
                         [or]
@@ -1297,16 +1301,16 @@
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
-						[and]
-							[not]
-								[have_location]
-									{EVENT_UNIT}
-									[filter]
-										trait=magical
-									[/filter]
-								[/have_location]
-							[/not]
-						[/and]
+                        [and]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        trait=magical
+                                    [/filter]
+                                [/have_location]
+                            [/not]
+                        [/and]
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1318,16 +1322,16 @@
                     [if]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
-						[and]
-							[not]
-								[have_location]
-									{EVENT_UNIT}
-									[filter]
-										trait=magical
-									[/filter]
-								[/have_location]
-							[/not]
-						[/and]
+                        [and]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        trait=magical
+                                    [/filter]
+                                [/have_location]
+                            [/not]
+                        [/and]
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
