--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -734,6 +734,7 @@
     [/filter]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="0,255,255"}
     {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_already_vanished $unit.id}
 [/event]
 
 [event]
