--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -23,32 +23,37 @@
         name=last_breath
         id=nfw_disabled_scenario
         first_time_only=no
-        [filter_condition]
-            {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
-        [/filter_condition]
-#ifdef CAMPAIGN_NORTHERN_REBIRTH
-        [filter]
-            [not]
-                id=Sister Thera,Father Morvin
-            [/not]
-        [/filter]
-#endif
         [if]
-            [have_location]
-                {EVENT_UNIT}
-                [filter]
-                    race=mechanical
-                    [or]
-                        trait=mechanical
-                    [/or]
-                [/filter]
-            [/have_location]
+            {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
             [then]
-                {NFW_destroyed_WOUND}
+                [if]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            race=mechanical
+                            [or]
+                                trait=mechanical
+                            [/or]
+                        [/filter]
+                    [/have_location]
+                    [then]
+                        {NFW_destroyed_WOUND}
+                    [/then]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+                    [elseif]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                id=Sister Thera,Father Morvin
+                            [/filter]
+                        [/have_location]
+                    [/elseif]
+#endif
+                    [else]
+                        {NFW_dead_WOUND}
+                    [/else]
+                [/if]
             [/then]
-            [else]
-                {NFW_dead_WOUND}
-            [/else]
         [/if]
         {CLEAR_VARIABLE nfw_already_wound}
         [fire_event]
@@ -58,6 +63,10 @@
             [/primary_unit]
         [/fire_event]
     [/event]
+    [set_variable]
+        name=nfw_disabled
+        value=yes
+    [/set_variable]
     {CLEAR_VARIABLE nfw_wounded}
 [/event]
 
@@ -96,9 +105,9 @@
         [filter_side]
             controller=human
         [/filter_side]
-		[not]
-			type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
-		[/not]
+        [not]
+            type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
+        [/not]
     [/filter]
     [if]
         # Compare with empty var, never use nfw_empty_var as variable
@@ -268,29 +277,35 @@
                 [/filter]
             [/have_location]
             [then]
-                [message]
-                    speaker=$unit.id
-                    message= _ "Argh!"
-                [/message]
                 [if]
-                    [variable]
-                        name=nfwe_unit_type.female.name
-                        equals=$nfw_empty_var
-                    [/variable]
+                    {VARIABLE_CONDITIONAL nfwe_already_message not_equals $unit.id}
                     [then]
                         [message]
                             speaker=$unit.id
-                            message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                            message= _ "Argh!"
                         [/message]
+                        [if]
+                            [variable]
+                                name=nfwe_unit_type.female.name
+                                equals=$nfw_empty_var
+                            [/variable]
+                            [then]
+                                [message]
+                                    speaker=$unit.id
+                                    message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                                [/message]
+                            [/then]
+                            [else]
+                                [message]
+                                    speaker=$unit.id
+                                    message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
+                                [/message]
+                            [/else]
+                        [/if]
+                        {VARIABLE nfwe_already_message $unit.id}
                     [/then]
-                    [else]
-                        [message]
-                            speaker=$unit.id
-                            message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
-                        [/message]
-                    [/else]
                 [/if]
             [/then]
         [/elseif]
