"Manually" removed, now works automatically too

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -540,7 +540,7 @@
             [/command]
         [/option]
         [option]
-            label="<b><b>»</b> "+_"Non-Fatal Wounds is manually disabled for this scenario"+"</b>"
+            label="<b><b>»</b> "+_"Non-Fatal Wounds is disabled for this scenario"+"</b>"
             [show_if]
                 {VARIABLE_CONDITIONAL nfw_disabled equals yes}
             [/show_if]
