Filtered more potential marine creatures

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1053,6 +1053,35 @@
                                         race=merman,naga
                                     [/filter]
                                 [/have_location]
+                                [or]
+                                    {VARIABLE_CONDITIONAL nfwe_unit_type.undead_variation equals swimmer}
+                                [/or]
+                                [or]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        [filter]
+                                            [filter_wml]
+                                                [movement_costs]
+                                                    [not]
+                                                        glob_on_flat=*
+                                                    [/not]
+                                                [/movement_costs]
+                                            [/filter_wml]
+                                        [/filter]
+                                    [/have_location]
+                                    [and]
+                                        [have_location]
+                                            {EVENT_UNIT}
+                                            [filter]
+                                                [filter_wml]
+                                                    [movement_costs]
+                                                        deep_water=1
+                                                    [/movement_costs]
+                                                [/filter_wml]
+                                            [/filter]
+                                        [/have_location]
+                                    [/and]
+                                [/or]
                                 [else]
                                     {NFW_fear_of_water_WOUND}
                                     {VARIABLE rand_wound_selected yes}
