TLU S19 - WoF S02 events

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -34,6 +34,7 @@
     [filter_condition]
         {VARIABLE_CONDITIONAL nfwe_wounds not_equals 1}
         {VARIABLE_CONDITIONAL nfw_already_vanished not_equals $unit.id}
+        {VARIABLE_CONDITIONAL current_scenario_id not_equals 19_Sky_Kingdom}
     [/filter_condition]
     [if]
         {VARIABLE_CONDITIONAL nfwe_already_catched not_equals $unit.id}
@@ -1060,27 +1061,12 @@
                                     [have_location]
                                         {EVENT_UNIT}
                                         [filter]
-                                            [filter_wml]
-                                                [movement_costs]
-                                                    [not]
-                                                        glob_on_flat=*
-                                                    [/not]
-                                                [/movement_costs]
-                                            [/filter_wml]
+                                            formula="movement_cost(self, 'Gg') > max_moves"
+                                            [and]
+                                                formula="movement_cost(self, 'Wo') = 1"
+                                            [/and]
                                         [/filter]
                                     [/have_location]
-                                    [and]
-                                        [have_location]
-                                            {EVENT_UNIT}
-                                            [filter]
-                                                [filter_wml]
-                                                    [movement_costs]
-                                                        deep_water=1
-                                                    [/movement_costs]
-                                                [/filter_wml]
-                                            [/filter]
-                                        [/have_location]
-                                    [/and]
                                 [/or]
                                 [else]
                                     {NFW_fear_of_water_WOUND}
