--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -327,6 +327,24 @@
             [/event]
         [/case]
 #endif
+#ifdef CAMPAIGN_WINDS_OF_FATE
+        [case]
+            value=03_The_Contention
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
+                image="misc/nfw-icon.png"
+            [/message]
+            [remove_event]
+                id=nfw_catch_last_breath,nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound,nfwme_funny_wounds,nfwme_wound_filter
+            [/remove_event]
+            [set_variable]
+                name=nfw_disabled
+                value=yes
+            [/set_variable]
+            {CLEAR_VARIABLE nfw_wounded}
+        [/case]
+#endif
     [/switch]
 [/event]
 
@@ -341,7 +359,6 @@
         name=last_breath
         first_time_only=no
         id=nfw_catch_lord_lenvan
-
         [filter]
             id=Lich-Lord Lenvan,Lich-Lord Jevyan
         [/filter]
@@ -360,6 +377,10 @@
             id=nfw_catch_last_breath_lenvan
             {NFW_CATCH_LAST_BREATH}
         [/event]
+        [set_variable]
+            name=nfw_disabled
+            value=no
+        [/set_variable]
     [/event]
 [/event]
 
