--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -66,7 +66,7 @@
             [/abilities]
         [/effect]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Retreat" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Retreat" color="255,255,255"}
 #enddef
 
 # one use wound, do not have any display
