--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -61,6 +61,18 @@
     {VARIABLE nfw_already_wound yes}
 [/event]
 
+# Gate always is destroyed
+[event]
+    name=last_breath
+    id=nfw_gate
+    first_time_only=no
+    [filter]
+        type=Gate
+    [/filter]
+    {NFW_destroyed_WOUND}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
 # filter plagueable plagued units
 [event]
     name=last_breath
@@ -1224,7 +1236,7 @@
                             [filter]
                                 race=horse,monster,wolf,bats,falcon,gryphon,bird,eoma_roc,eoma_magical
                                 [or]
-                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat,Wyrm,Cave Wyrmlet,Cave Wyrm,Red Wyrmlet,Red Wyrm
                                 [/or]
                                 [or]
                                     variation=bat,falcon,gryphon,bird,horse,rat,spider,serpent,boar,wolf
@@ -1251,7 +1263,7 @@
                             [filter]
                                 race=bats,falcon,gryphon,drake,bird,eoma_roc
                                 [or]
-                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat,Wyrm,Cave Wyrmlet,Cave Wyrm,Red Wyrmlet,Red Wyrm
                                 [/or]
                                 [or]
                                     variation=bat,drake,falcon,gryphon,bird
@@ -1283,7 +1295,7 @@
                             [filter]
                                 race=bats,falcon,gryphon,naga,merman,bird,eoma_roc,eoma_magical
                                 [or]
-                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+                                    type=SotA Soulless_Bat,SotA Flying Corpse_Bat,Wyrm,Cave Wyrmlet,Cave Wyrm,Red Wyrmlet,Red Wyrm
                                 [/or]
                                 [or]
                                     variation=bat,drake,falcon,gryphon,swimmer,bird
