New Event: ANO S04

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -199,6 +199,10 @@
             [fire_event]
                 name=nfw_disable_for_this_scenario
             [/fire_event]
+            [set_variable]
+                name=nfw_disabled
+                value=yes
+            [/set_variable]
         [/case]
 #endif
 #ifdef CAMPAIGN_THE_SOUTH_GUARD
@@ -212,6 +216,10 @@
             [fire_event]
                 name=nfw_disable_for_this_scenario
             [/fire_event]
+            [set_variable]
+                name=nfw_disabled
+                value=yes
+            [/set_variable]
         [/case]
 #endif
         # Campaign-specific warning that display a message but don't change the behavior of the mod.
@@ -338,6 +346,24 @@
             [remove_event]
                 id=nfw_catch_last_breath,nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound,nfwme_funny_wounds,nfwme_wound_filter
             [/remove_event]
+            [set_variable]
+                name=nfw_disabled
+                value=yes
+            [/set_variable]
+            {CLEAR_VARIABLE nfw_wounded}
+        [/case]
+#endif
+#ifdef ANEWORDER
+        [case]
+            value=04_Battle_of_Barnon
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
+                image="misc/nfw-icon.png"
+            [/message]
+            [fire_event]
+                name=nfw_disable_for_this_scenario
+            [/fire_event]
             [set_variable]
                 name=nfw_disabled
                 value=yes
