Filtered Gawen on dialog

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -108,6 +108,11 @@
         [not]
             type=EoMa_Dimensional_Gate,EoMa_Dimensional_Gate_II
         [/not]
+#ifdef ANEWORDER
+        [not]
+            id=Gawen Hagarthen
+        [/not]
+#endif
     [/filter]
     [if]
         # Compare with empty var, never use nfw_empty_var as variable
